Changes for 2.4.7rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China) and Czech translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-9809] fixed action operation validation (Gunars)
...G...... [ZBX-9716] fixed possible event record number wraparound issues in the old Windows Eventing support (wiper)
...G...... [ZBX-9258] fixed Alias for log[], logrt[] and eventlog[] (gleb)
.......PS. [ZBX-4284] improved handling of timeouting items on reachable hosts (wiper)
...G...... [ZBX-9721] fixed agent log message for log[] item in case of log records longer than 256kB (gleb)
..F....... [ZBX-9631] fixed "Undefined offset" in the actions conditions and lld rule filters when using a custom expression with more than 26 elements (Gunars, Sasha)
..F....... [ZBX-7492] fixed "Undefined index" when importing host without macros (Gunars)
....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)
...G...... [ZBX-9739] fixed agent crash when active check fails without setting error message (wiper)

--------------------------------------------------------------------------------
Changes for 2.4.6

2.4.6rc1 was released as 2.4.6 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.6rc1

New features:
A.F....... [ZBX-1357] enabled Czech locale to be displayed by default (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (Taiwan), Czech, Dutch, Japanese and Spanish translations; thanks to Zabbix translators (Richlv)
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)

Bug fixes:
..F....... [ZBX-9375] fixed "Group" and "Host" dropdowns not setting values in "Events" page when navigating from trigger menu pop-up link and fixed availability reports filter dropdowns mistakenly using "Dropdown first entry" config (Ivo)