@@ -31,7 +31,9 @@ require_once dirname(__FILE__).'/include/page_header.php';
 $fields = array(
 	'triggerid' => array(T_ZBX_INT, O_MAND, P_SYS, DB_ID, null)
 );
-check_fields($fields);
+if (!check_fields($fields)) {
+	exit();
+}
 
 /*
  * Permissions
